--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Hacker News</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0, minimal-ui">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.14.0/axios.min.js"></script>
-	<script src="hn.js"></script>
-	<script src="main.js"></script>
+	<script src="/js/hn.js"></script>
+	<script src="/js/index.js"></script>
 </body>
 </html>
