--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+
+	<ul id="stories"></ul>
+	<button id="more">More...</button>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.14.0/axios.min.js"></script>
 	<script src="/js/hn.js"></script>
