--- a/comments.html
+++ b/comments.html
@@ -7,16 +7,13 @@
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-
-	<div id="container">
-		<ul id="stories"></ul>
-		<button id="more">More...</button>
-	</div>
+	
+	<div id="container"></div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.14.0/axios.min.js"></script>
 	<script src="/js/hn.js"></script>
 	<script src="/js/util.js"></script>
-	<script src="/js/index.js"></script>
+	<script src="/js/comments.js"></script>
 </body>
 </html>
