Add list mode picker

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
 
 	<div id="container">
+		<select id="mode-picker">
+			<option value="top">Top</option>
+			<option value="new">New</option>
+			<option value="best">Best</option>
+			<option value="ask">Ask</option>
+			<option value="show">Show</option>
+			<option value="jobs">Jobs</option>
+		</select>
+		
 		<ul id="stories"></ul>
 		<button id="more">More...</button>
 	</div>
