--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<button id="more">More...</button>
 	</div>
 
+	<div class="loading"></div>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.14.0/axios.min.js"></script>
 	<script src="/js/hn.js"></script>
