--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Hacker News</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0, minimal-ui">
 	<link rel="stylesheet" href="/css/main.css">
+	<link rel="icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" href="/favicon.ico">
 </head>
 <body>
 
